mobile layout breakpoint fixed

--- a/main.scss
+++ b/main.scss
@@ -8,7 +8,7 @@ $smallFColor: hsl(189, 41%, 97%);
 $backCalcColor: hsl(0, 0%, 100%);
 $cyan: rgb(38, 195, 174);
 $fontSizeInputs: 24px;
-$breakpoint-mobile: 452px;
+$breakpoint-mobile: 530px;
 
 // Mixins
 
